Fix titile word-wrap

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -28,6 +28,7 @@
       h1 {
         display: table-caption;
         font-size: 5rem;
+        word-wrap: normal;
       }
     }
   }
